4_circuit_breaker/istio/circuit-breaker.yaml
##################################################################################################
#  Aloha
##################################################################################################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: aloha-cb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: aloha
        version: "2.0"
    spec:
      containers:
      - name: spring-boot
        image: kameshsampath/aloha:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10

##################################################################################################
#  HelloWorld
##################################################################################################
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld-cb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: "2.0"
    spec:
      containers:
      - name: spring-boot
        image: kameshsampath/helloworld:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
