4_circuit_breaker/istio/helloworld_ingress.yaml
###########################################################################
# Ingress resource (helloworld-tracing)
##########################################################################

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-tracing
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /hellotracer
        backend:
          serviceName: helloworld-tracer
          servicePort: 8080
      - path: /helloworld
        backend:
          serviceName: helloworld
          servicePort: 8080
      - path: /namaste
        backend:
          serviceName: namaste
          servicePort: 8080
      - path: /hola
        backend:
          serviceName: hola
          servicePort: 8080
      - path: /aloha
        backend:
          serviceName: aloha
          servicePort: 8080
      - path: /aloha2
        backend:
          serviceName: aloha
          servicePort: 8080
